// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mute should display mute icon if \`isMuted\` is false 1`] = `
<span
  data-testid="mute"
>
  <i
    class="main material-icons"
    data-testid="mute-icon"
  >
    volume_down
  </i>
</span>
`;

exports[`Mute should display unmute icon if \`isMuted\` is true 1`] = `
<span
  data-testid="mute"
>
  <i
    class="main material-icons"
    data-testid="unmute-icon"
  >
    volume_mute
  </i>
</span>
`;
